[package]
name = "damaru-cli"
description = "CLI for build and pack damaru-based application"
version = "0.0.0-dummy"
authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icetemple/damaru-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

